gcc/testsuite/rust/rustc/ui/array-not-vector.rs
fn main() {
    let _x: i32 = [1, 2, 3];
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }

    let x: &[i32] = &[1, 2, 3];
    let _y: &i32 = x;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
// { dg-error ".E0308." "" { target *-*-* } .-3 }
// { dg-error ".E0308." "" { target *-*-* } .-4 }
}

